--- a/_autosummary/diffusion_models.utils.helpers.html
+++ b/_autosummary/diffusion_models.utils.helpers.html
@@ -20,7 +20,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="diffusion_models.utils.helpers.dotdict" href="diffusion_models.utils.helpers.dotdict.html" />
-    <link rel="prev" title="diffusion_models.utils.datasets.UnconditionedCifar10Dataset" href="diffusion_models.utils.datasets.UnconditionedCifar10Dataset.html" /> 
+    <link rel="prev" title="diffusion_models.utils.datasets.MNISTTrainDataset" href="diffusion_models.utils.datasets.MNISTTrainDataset.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -114,7 +114,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="diffusion_models.utils.datasets.UnconditionedCifar10Dataset.html" class="btn btn-neutral float-left" title="diffusion_models.utils.datasets.UnconditionedCifar10Dataset" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="diffusion_models.utils.datasets.MNISTTrainDataset.html" class="btn btn-neutral float-left" title="diffusion_models.utils.datasets.MNISTTrainDataset" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="diffusion_models.utils.helpers.dotdict.html" class="btn btn-neutral float-right" title="diffusion_models.utils.helpers.dotdict" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
