--- a/_autosummary/diffusion_models.models.unet.UNet.html
+++ b/_autosummary/diffusion_models.models.unet.UNet.html
@@ -143,7 +143,8 @@ and still yield an even number at this point. Best to just stick with powers of 
 <p>Constructor of UNet.</p>
 <dl class="field-list simple">
 <dt class="field-odd">type num_encoding_blocks<span class="colon">:</span></dt>
-<dd class="field-odd"><p></p></dd>
+<dd class="field-odd"><p><code class="xref py py-class docutils literal notranslate"><span class="pre">int</span></code></p>
+</dd>
 <dt class="field-even">param num_encoding_blocks<span class="colon">:</span></dt>
 <dd class="field-even"><p>how many basic encoder building blocks; each block will double the channels and half the resolution</p>
 </dd>
