--- a/genindex.html
+++ b/genindex.html
@@ -87,6 +87,7 @@
 <div class="genindex-jumpbox">
  <a href="#_"><strong>_</strong></a>
  | <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
@@ -124,6 +125,14 @@
       <li><a href="_autosummary/diffusion_models.models.unet.AttentionDecodingBlock.html#diffusion_models.models.unet.AttentionDecodingBlock">AttentionDecodingBlock (class in diffusion_models.models.unet)</a>
 </li>
       <li><a href="_autosummary/diffusion_models.models.unet.AttentionEncodingBlock.html#diffusion_models.models.unet.AttentionEncodingBlock">AttentionEncodingBlock (class in diffusion_models.models.unet)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.utils.helpers.bytes_to_gb.html#diffusion_models.utils.helpers.bytes_to_gb">bytes_to_gb() (in module diffusion_models.utils.helpers)</a>
 </li>
   </ul></td>
 </tr></table>
